style: Fix sourceview not visible when always show scrollbars is enabled

--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -101,8 +101,12 @@ mathdisplay textview text {
   margin-bottom: -8px;
 }
 
+.display-scrolled > scrollbar:not(.overlay-indicator) trough {
+  margin-top: 4px;
+  margin-bottom: 0;
+}
+
 .sourceview {
-  padding-bottom: 8px;
   font-size: 1.4em;
   font-feature-settings: "tnum";
 }
